#
# Copyright rev.ng Srls. See LICENSE.md for details.
#

revng_add_analyses_library(Decompiler revngc
  AddSCEVBarrierPass.cpp
  ASTBuildAnalysis.cpp
  DLACollapseIdentityAndInheritanceCC.cpp
  DLAComputeNonInterferingComponents.cpp
  DLAComputeUpperMemberAccess.cpp
  DLACreateInterProceduralTypes.cpp
  DLACreateIntraProceduralTypes.cpp
  DLAHelpers.cpp
  DLALayouts.cpp
  DLAMakeInheritanceTree.cpp
  DLAMakeLayouts.cpp
  DLAPass.cpp
  DLAPruneLayoutNodesWithoutLayout.cpp
  DLARemoveTransitiveInheritanceEdges.cpp
  DLAStep.cpp
  DLATypeSystem.cpp
  CDecompiler.cpp
  CDecompilerAction.cpp
  CDecompilerBeautify.cpp
  CDecompilerPass.cpp
  DecompilationHelpers.cpp
  FuncDeclCreationAction.cpp
  GlobalDeclCreationAction.cpp
  IRASTTypeTranslation.cpp
  MarkForSerialization.cpp
  SCEVBaseAddressExplorer.cpp
  TypeDeclCreationAction.cpp)

target_link_libraries(Decompiler
  FilterForDecompilation
  IsolatedFunctions
  LivenessAnalysis
  PHIASAPAssignmentInfo
  RestructureCFGPass
  RemoveNewPCCalls
  RemoveCpuLoopStore
  RemoveExceptionCalls
  RemoveLLVMAssumeCalls
  MakeEnvNull
  ThreadSafeClangTooling
  revng::revngModel
  revng::revngSupport
  revng::revngTypeShrinking
  clangTooling
  clangAST
  clangBasic
  clangFrontend
  clangSerialization
  ${LLVM_LIBRARIES})
