#
# Copyright rev.ng Srls. See LICENSE.md for details.
#

revng_add_analyses_library(
  revngcDecompiler
  revngc
  AddSCEVBarrierPass.cpp
  ASTBuildAnalysis.cpp
  CDecompilerAction.cpp
  CDecompilerPass.cpp
  DecompilationHelpers.cpp
  FuncDeclCreationAction.cpp
  GlobalDeclCreationAction.cpp
  IRASTTypeTranslation.cpp
  TypeDeclCreationAction.cpp
  AddPrimitiveTypesPass.cpp)

target_link_libraries(
  revngcDecompiler
  revngcDataLayoutAnalysis
  revngcFilterForDecompilation
  revngcLivenessAnalysis
  revngcPHIASAPAssignmentInfo
  revngcRestructureCFGPass
  revngcRemoveNewPCCalls
  revngcRemoveCpuLoopStore
  revngcRemoveExceptionCalls
  revngcRemoveLLVMAssumeCalls
  revngcRemoveLLVMDbgIntrinsics
  revngcMakeEnvNull
  revngcMarkForSerialization
  revngcThreadSafeClangTooling
  revngcSupport
  revng::revngModel
  revng::revngSupport
  revng::revngTypeShrinking
  clangTooling
  clangAST
  clangBasic
  clangFrontend
  clangSerialization
  ${LLVM_LIBRARIES})
